{
  "version": 4,
  "terraform_version": "1.0.11",
  "serial": 1017,
  "lineage": "cef0538b-f9c6-dc6e-0d35-3605dfe153e6",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "blockchain-prod-all_worker_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:103947711118:security-group/sg-02b3c0eca027d9637",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-02b3c0eca027d9637",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/24",
                  "172.16.0.0/12",
                  "192.168.0.0/16",
                  "178.31.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "blockchain-prod-all_worker_management2021120905371318940000000a",
            "name_prefix": "blockchain-prod-all_worker_management",
            "owner_id": "103947711118",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "blockchain-prod"
            },
            "tags_all": {
              "Environment": "blockchain-prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a00e571851180b5c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "blockchain_prod_worker_group_mgmt_one",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:103947711118:security-group/sg-0ed51f03891bf12f2",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0ed51f03891bf12f2",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.10.0.0/24"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "blockchain_prod_worker_group_mgmt_one2021120905371333840000000b",
            "name_prefix": "blockchain_prod_worker_group_mgmt_one",
            "owner_id": "103947711118",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "blockchain-prod"
            },
            "tags_all": {
              "Environment": "blockchain-prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a00e571851180b5c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "blockchain_prod_worker_group_mgmt_three",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:103947711118:security-group/sg-0b8ef6cc903f349a2",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0b8ef6cc903f349a2",
            "ingress": [
              {
                "cidr_blocks": [
                  "178.31.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "blockchain_prod_worker_group_mgmt_three20211209053709807800000009",
            "name_prefix": "blockchain_prod_worker_group_mgmt_three",
            "owner_id": "103947711118",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "blockchain-prod"
            },
            "tags_all": {
              "Environment": "blockchain-prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a00e571851180b5c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "blockchain_prod_worker_group_mgmt_two",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:103947711118:security-group/sg-022ef29bf9dc79ed0",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-022ef29bf9dc79ed0",
            "ingress": [
              {
                "cidr_blocks": [
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "blockchain_prod_worker_group_mgmt_two2021120905371421830000000c",
            "name_prefix": "blockchain_prod_worker_group_mgmt_two",
            "owner_id": "103947711118",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "blockchain-prod"
            },
            "tags_all": {
              "Environment": "blockchain-prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a00e571851180b5c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:103947711118:security-group/sg-01ba4369055fee599",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-01ba4369055fee599",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "blockchain-prod_rds",
            "name_prefix": "",
            "owner_id": "103947711118",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "blockchain-prod"
            },
            "tags_all": {
              "Name": "blockchain-prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a00e571851180b5c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:103947711118:security-group/sg-08f6bf6e33bfa7729",
            "description": "subnet where redis will live",
            "egress": [],
            "id": "sg-08f6bf6e33bfa7729",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0",
                  "10.10.0.0/24",
                  "192.168.0.0/16"
                ],
                "description": "",
                "from_port": 6379,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6379
              }
            ],
            "name": "blockchain-prod-redis-security-group",
            "name_prefix": "",
            "owner_id": "103947711118",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "blockchain-prod"
            },
            "tags_all": {
              "Environment": "blockchain-prod"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a00e571851180b5c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redis",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:103947711118:subnet/subnet-0e527a356bf3e66e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.10.7.0/24",
            "id": "subnet-0e527a356bf3e66e1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "103947711118",
            "tags": {
              "Environment": "blockchain-prod-redis-public"
            },
            "tags_all": {
              "Environment": "blockchain-prod-redis-public"
            },
            "vpc_id": "vpc-0a00e571851180b5c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:103947711118:security-group/sg-0e01f36e02143d21e",
            "description": "EKS cluster security group.",
            "egress": [],
            "id": "sg-0e01f36e02143d21e",
            "ingress": [],
            "name": "blockchain-prod-eks-u9XBVrk62021120905371867460000000e",
            "name_prefix": "blockchain-prod-eks-u9XBVrk6",
            "owner_id": "103947711118",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "blockchain-prod",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "blockchain-prod-eks-u9XBVrk6-eks_cluster_sg"
            },
            "tags_all": {
              "Environment": "blockchain-prod",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "blockchain-prod-eks-u9XBVrk6-eks_cluster_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a00e571851180b5c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "workers",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:103947711118:security-group/sg-02462ea6898e825fe",
            "description": "Security group for all nodes in the cluster.",
            "egress": [],
            "id": "sg-02462ea6898e825fe",
            "ingress": [],
            "name": "blockchain-prod-eks-u9XBVrk62021120905371677440000000d",
            "name_prefix": "blockchain-prod-eks-u9XBVrk6",
            "owner_id": "103947711118",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "blockchain-prod",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "blockchain-prod-eks-u9XBVrk6-eks_worker_sg",
              "kubernetes.io/cluster/blockchain-prod-eks-u9XBVrk6": "owned"
            },
            "tags_all": {
              "Environment": "blockchain-prod",
              "GithubOrg": "terraform-aws-modules",
              "GithubRepo": "terraform-aws-eks",
              "Name": "blockchain-prod-eks-u9XBVrk6-eks_worker_sg",
              "kubernetes.io/cluster/blockchain-prod-eks-u9XBVrk6": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a00e571851180b5c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow cluster egress access to the Internet.",
            "from_port": 0,
            "id": "sgrule-4097879177",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0e01f36e02143d21e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster_https_worker_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods to communicate with the EKS cluster API.",
            "from_port": 443,
            "id": "sgrule-3972709044",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0e01f36e02143d21e",
            "self": false,
            "source_security_group_id": "sg-02462ea6898e825fe",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_egress_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow nodes all egress to the Internet.",
            "from_port": 0,
            "id": "sgrule-3055048133",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-02462ea6898e825fe",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow workers pods to receive communication from the cluster control plane.",
            "from_port": 1025,
            "id": "sgrule-792155977",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02462ea6898e825fe",
            "self": false,
            "source_security_group_id": "sg-0e01f36e02143d21e",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_cluster_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow pods running extension API servers on port 443 to receive communication from cluster control plane.",
            "from_port": 443,
            "id": "sgrule-1183726598",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02462ea6898e825fe",
            "self": false,
            "source_security_group_id": "sg-0e01f36e02143d21e",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "workers_ingress_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow node to communicate with each other.",
            "from_port": 0,
            "id": "sgrule-2033397478",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-02462ea6898e825fe",
            "self": false,
            "source_security_group_id": "sg-02462ea6898e825fe",
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.workers",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-001e2e8715888941e",
            "domain": "vpc",
            "id": "eipalloc-001e2e8715888941e",
            "network_border_group": "us-west-1",
            "public_dns": "ec2-13-52-15-217.us-west-1.compute.amazonaws.com",
            "public_ip": "13.52.15.217",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "blockchain-prod-vpc-us-west-1a",
              "kubernetes.io/cluster/blockchain-prod-eks-u9XBVrk6": "shared"
            },
            "tags_all": {
              "Name": "blockchain-prod-vpc-us-west-1a",
              "kubernetes.io/cluster/blockchain-prod-eks-u9XBVrk6": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:103947711118:internet-gateway/igw-0be1e402c438bdcf8",
            "id": "igw-0be1e402c438bdcf8",
            "owner_id": "103947711118",
            "tags": {
              "Name": "blockchain-prod-vpc",
              "kubernetes.io/cluster/blockchain-prod-eks-u9XBVrk6": "shared"
            },
            "tags_all": {
              "Name": "blockchain-prod-vpc",
              "kubernetes.io/cluster/blockchain-prod-eks-u9XBVrk6": "shared"
            },
            "vpc_id": "vpc-0a00e571851180b5c"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-001e2e8715888941e",
            "connectivity_type": "public",
            "id": "nat-0966740567a7bb24b",
            "network_interface_id": "eni-0c86ba207978b7f5f",
            "private_ip": "10.10.4.138",
            "public_ip": "13.52.15.217",
            "subnet_id": "subnet-0de0cb0c8ed5dd8ba",
            "tags": {
              "Name": "blockchain-prod-vpc-us-west-1a",
              "kubernetes.io/cluster/blockchain-prod-eks-u9XBVrk6": "shared"
            },
            "tags_all": {
              "Name": "blockchain-prod-vpc-us-west-1a",
              "kubernetes.io/cluster/blockchain-prod-eks-u9XBVrk6": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-06f3ffc10a7f6f5701080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0966740567a7bb24b",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06f3ffc10a7f6f570",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0be1e402c438bdcf8",
            "id": "r-rtb-0ef763078d3bc83e21080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ef763078d3bc83e2",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:103947711118:route-table/rtb-06f3ffc10a7f6f570",
            "id": "rtb-06f3ffc10a7f6f570",
            "owner_id": "103947711118",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "blockchain-prod-vpc-private",
              "kubernetes.io/cluster/blockchain-prod-eks-u9XBVrk6": "shared"
            },
            "tags_all": {
              "Name": "blockchain-prod-vpc-private",
              "kubernetes.io/cluster/blockchain-prod-eks-u9XBVrk6": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a00e571851180b5c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:103947711118:route-table/rtb-0ef763078d3bc83e2",
            "id": "rtb-0ef763078d3bc83e2",
            "owner_id": "103947711118",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "blockchain-prod-vpc-public",
              "kubernetes.io/cluster/blockchain-prod-eks-u9XBVrk6": "shared"
            },
            "tags_all": {
              "Name": "blockchain-prod-vpc-public",
              "kubernetes.io/cluster/blockchain-prod-eks-u9XBVrk6": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a00e571851180b5c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02bee8fd4ae91c3c8",
            "route_table_id": "rtb-06f3ffc10a7f6f570",
            "subnet_id": "subnet-0f421714b762693fe"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096afdfd4ca106c87",
            "route_table_id": "rtb-06f3ffc10a7f6f570",
            "subnet_id": "subnet-03711986fac7795d4"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d4fe0802b5468dc7",
            "route_table_id": "rtb-06f3ffc10a7f6f570",
            "subnet_id": "subnet-0b9df6c2e899b4785"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04370705912dfabb4",
            "route_table_id": "rtb-0ef763078d3bc83e2",
            "subnet_id": "subnet-0de0cb0c8ed5dd8ba"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-024264d88f35a3105",
            "route_table_id": "rtb-0ef763078d3bc83e2",
            "subnet_id": "subnet-088997febea0fc0fe"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b5a42ffceae79f7",
            "route_table_id": "rtb-0ef763078d3bc83e2",
            "subnet_id": "subnet-0db7bb9e72b703ccc"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:103947711118:subnet/subnet-0f421714b762693fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.10.1.0/24",
            "id": "subnet-0f421714b762693fe",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "103947711118",
            "tags": {
              "Name": "blockchain-prod-vpc-private-us-west-1a",
              "kubernetes.io/cluster/blockchain-prod-eks-u9XBVrk6": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "blockchain-prod-vpc-private-us-west-1a",
              "kubernetes.io/cluster/blockchain-prod-eks-u9XBVrk6": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0a00e571851180b5c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:103947711118:subnet/subnet-03711986fac7795d4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.10.2.0/24",
            "id": "subnet-03711986fac7795d4",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "103947711118",
            "tags": {
              "Name": "blockchain-prod-vpc-private-us-west-1b",
              "kubernetes.io/cluster/blockchain-prod-eks-u9XBVrk6": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "blockchain-prod-vpc-private-us-west-1b",
              "kubernetes.io/cluster/blockchain-prod-eks-u9XBVrk6": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0a00e571851180b5c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:103947711118:subnet/subnet-0b9df6c2e899b4785",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.10.3.0/24",
            "id": "subnet-0b9df6c2e899b4785",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "103947711118",
            "tags": {
              "Name": "blockchain-prod-vpc-private-us-west-1a",
              "kubernetes.io/cluster/blockchain-prod-eks-u9XBVrk6": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "blockchain-prod-vpc-private-us-west-1a",
              "kubernetes.io/cluster/blockchain-prod-eks-u9XBVrk6": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0a00e571851180b5c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:103947711118:subnet/subnet-0de0cb0c8ed5dd8ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.10.4.0/24",
            "id": "subnet-0de0cb0c8ed5dd8ba",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "103947711118",
            "tags": {
              "Name": "blockchain-prod-vpc-public-us-west-1a",
              "kubernetes.io/cluster/blockchain-prod-eks-u9XBVrk6": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "blockchain-prod-vpc-public-us-west-1a",
              "kubernetes.io/cluster/blockchain-prod-eks-u9XBVrk6": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0a00e571851180b5c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:103947711118:subnet/subnet-088997febea0fc0fe",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.10.5.0/24",
            "id": "subnet-088997febea0fc0fe",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "103947711118",
            "tags": {
              "Name": "blockchain-prod-vpc-public-us-west-1b",
              "kubernetes.io/cluster/blockchain-prod-eks-u9XBVrk6": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "blockchain-prod-vpc-public-us-west-1b",
              "kubernetes.io/cluster/blockchain-prod-eks-u9XBVrk6": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0a00e571851180b5c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:103947711118:subnet/subnet-0db7bb9e72b703ccc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.10.6.0/24",
            "id": "subnet-0db7bb9e72b703ccc",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "103947711118",
            "tags": {
              "Name": "blockchain-prod-vpc-public-us-west-1a",
              "kubernetes.io/cluster/blockchain-prod-eks-u9XBVrk6": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "blockchain-prod-vpc-public-us-west-1a",
              "kubernetes.io/cluster/blockchain-prod-eks-u9XBVrk6": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0a00e571851180b5c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:103947711118:vpc/vpc-0a00e571851180b5c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/16",
            "default_network_acl_id": "acl-0cc365f518cbac8ac",
            "default_route_table_id": "rtb-07b9325494cbc4efd",
            "default_security_group_id": "sg-05499b04b836a3949",
            "dhcp_options_id": "dopt-882434ea",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a00e571851180b5c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-07b9325494cbc4efd",
            "owner_id": "103947711118",
            "tags": {
              "Name": "blockchain-prod-vpc",
              "kubernetes.io/cluster/blockchain-prod-eks-u9XBVrk6": "shared"
            },
            "tags_all": {
              "Name": "blockchain-prod-vpc",
              "kubernetes.io/cluster/blockchain-prod-eks-u9XBVrk6": "shared"
            }
          },
          "dependencies": [
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}